--- a/location-appart-frontend/package.json
+++ b/location-appart-frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@supabase/auth-helpers-nextjs": "^0.15.0",
     "@supabase/supabase-js": "^2.90.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.563.0",
