--- a/location-appart-backend/package.json
+++ b/location-appart-backend/package.json
@@ -21,7 +21,8 @@
     "node-cron": "^4.2.1",
     "nodemailer": "^7.0.12",
     "pdfkit": "^0.17.2",
-    "react-datepicker": "^9.1.0"
+    "react-datepicker": "^9.1.0",
+    "resend": "^6.9.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
